--- a/ChaiAurCode/Javascript/Code/index.html
+++ b/ChaiAurCode/Javascript/Code/index.html
@@ -6,7 +6,7 @@
     <title>Javascript</title>
 </head>
 <body>
-    <h1>Javascript</h1>
-    <script src="42)OOP.js"></script>
+    <h1>Javascript Bro</h1>
+    <script src="42_OOP.js"></script>
 </body>
 </html>
