--- a/ChaiAurCode/Javascript/Code/index.html
+++ b/ChaiAurCode/Javascript/Code/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript</title>
+    <title>DOM learning</title>
 </head>
+
 <body>
-    <h1>Javascript Bro</h1>
-    <script src="42_OOP.js"></script>
+    <div class="bg-black">
+        <h1 class="heading">Javascript</h1>
+    </div>
+    <script src="31_DOM.js"></script>
 </body>
+
 </html>
+
+<!-- window -> document -> doctype(HTML) -> HEAD (metadata -> attribute, title -> text node), BODY(document Structure {div -> attribute,p->attr->text node,h->attr->text node})  -->
